--- a/charts/celeborn/templates/worker/service.yaml
+++ b/charts/celeborn/templates/worker/service.yaml
@@ -24,5 +24,5 @@ metadata:
 spec:
   selector:
     {{- include "celeborn.worker.selectorLabels" . | nindent 4 }}
-  type: {{ .Values.service.type }}
+  type: {{ .Values.worker.service.type }}
   clusterIP: None
