Add master.labels and worker.labels
Signed-off-by: Yi Chen <github@chenyicn.net>

--- a/charts/celeborn/templates/master/statefulset.yaml
+++ b/charts/celeborn/templates/master/statefulset.yaml
@@ -31,6 +31,9 @@ spec:
       labels:
         {{- include "celeborn.master.selectorLabels" . | nindent 8 }}
         app.kubernetes.io/tag: {{ .Values.image.tag | quote }}
+      {{- with .Values.master.labels }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- with .Values.master.annotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
